# Ithildin

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CODEX.md  Makefile  README.md  pyproject.toml  tool-manifests.lock.json
apps/api/: runtime_candidate_bootstrap.py  verified_launch.py
apps/ui/: index.html  package-lock.json  package.json
db/alembic/: alembic.ini  env.py  script.py.mako
deploy/: Dockerfile.api  Dockerfile.node  Dockerfile.ui  README.md  docker-compose.yml
deploy/hermes-poc/: Dockerfile  README.md  compose.yaml  config.yaml  mission.md  workspaces.yaml
deploy/node/: README.md
docs/: AGENTS.md
docs/adr/: 0001-local-first-governed-mcp-gateway.md  0002-deny-default-policy.md  0003-monorepo-for-mvp.md
docs/codex/: accepted-risk-register-v2.json  accepted-risk-register-v2.md  accepted-risk-register.json  accepted-risk-register.md  adversarial-corpus-framework.md  agent-run-evidence-contract.md  agent-run-evidence-export-design.md  agent-run-evidence-export-implementation-plan.md  agent-run-evidence-export-implementation.md  agent-run-evidence-readiness-gate.md  agent-run-model-contract.md  agent-run-observability-and-sandbox-roadmap.md  agent-run-operations-readiness-gate.md  agent-run-timeline-readiness-gate.md  agent-workflow-instruction-layer.md  audit-export-lifecycle-diagnostics.md  audit-integrity-adversarial-suite.md  autonomous-sprint-guardrails.md  batch-validation-strategy.md  candidate-capability-triage.md  capability-decision-report.md  capability-expansion-gate.md  ci-platform-plan.md  closure-matrix-evidence-sync.md  command-center-cc-pilot-101-data-feasibility.md  command-center-cc-pilot-101-implementation-handoff.md  command-center-cc-pilot-102-data-feasibility.md  command-center-cc-pilot-102-implementation-handoff.md  command-center-cc-pilot-103-data-feasibility.md  command-center-cc-pilot-103-implementation-handoff.md  command-center-cc-pilot-104-data-feasibility.md  command-center-cc-pilot-104-implementation-handoff.md  command-center-cc-pilot-105-data-feasibility.md  command-center-cc-pilot-105-implementation-handoff.md  command-center-cc-pilot-106-data-feasibility.md  command-center-cc-pilot-106-implementation-handoff.md  command-center-cc-pilot-107-uat-handoff.md  command-center-golden-pilot-scenario.md  command-center-information-architecture.md  command-center-initial-operator-uat-evidence.md  (+581 more)
docs/obsidian/: 00-index.md  01-product-positioning.md  02-system-architecture.md  03-security-model.md  04-threat-model.md  11-roadmap.md  (+9 more)
policies/: default.yaml
principals/: local.yaml
schemas/: runtime-candidate-authorization.schema.json
scripts/: AGENTS.md  __init__.py  accepted_risk_register.py  admin_token.py  adversarial_corpus_check.py  agent_run_correlation_packet.py  agent_run_correlation_smoke.py  agent_run_evidence_contract_check.py  agent_run_evidence_export_check.py  agent_run_evidence_export_implementation_gate.py  agent_run_evidence_export_plan_check.py  agent_run_evidence_packet.py  agent_run_evidence_readiness.py  agent_run_operations_readiness.py  agent_run_timeline_packet.py  agent_run_timeline_readiness.py  agent_workflow_check.py  artifact_freshness_check.py  audit_diagnostics.py  audit_signing.py  build_docs_site.py  capability_decision_report.py  capability_expansion_gate.py  closure_matrix_evidence_sync.py  command_center_closure_review_history_check.py  compliance_mapping_architecture_check.py  compliance_mapping_disposition_closure_check.py  compliance_mapping_disposition_packet.py  compliance_mapping_external_response_intake_check.py  compliance_mapping_external_review_bundle.py  compliance_mapping_response_dry_run.py  compliance_mapping_response_kit.py  compliance_mapping_template_compatibility_check.py  consolidate_review_packet.py  control_mapping_design_check.py  control_mapping_readiness.py  dashboard_evidence_checklist_check.py  data_classification_design_check.py  demo_evidence_packet.py  demo_evidence_readiness.py  (+473 more)
tests/: conftest.py  test_admin_token.py  test_adversarial_corpus.py  test_api_service.py  test_approval_workflow.py  test_audit_diagnostics.py  test_audit_writer.py  test_core_schemas.py  test_docs_site.py  test_filesystem_contract_check.py  test_governed_tool_calls.py  test_hermes_governance_poc_plan.py  test_hermes_poc_evidence_check.py  test_http_tools.py  test_identity.py  test_local_prompt_triage.py  test_local_v1_contract.py  test_local_v1_golden_path.py  test_local_v1_node_journey.py  test_manifest_change_review.py  test_mcp_adapter.py  test_mcp_inspector_recipes.py  test_mcp_integration_flow.py  test_mission_command_control_plane_plan_check.py  test_mission_command_control_plane_poc_evidence.py  test_mission_database_migration.py  test_mission_templates.py  test_missions.py  test_negative_review_transcripts.py  test_node_cli.py  test_node_client.py  test_node_configuration.py  test_node_configuration_trust.py  test_node_governed_access.py  test_node_release_artifact.py  test_node_service.py  test_node_versions.py  test_nodes.py  test_ollama_demo.py  test_opa_policy_evaluator.py  (+25 more)
tool-manifests/: fs-list.yaml  fs-patch-apply.yaml  fs-patch-propose.yaml  fs-read.yaml  fs-search.yaml  fs-stat.yaml  git-diff.yaml  git-log.yaml  git-show-commit-metadata.yaml  git-show-ref-summary.yaml  git-show-tag-metadata.yaml  git-status.yaml  http-fetch.yaml  project-ci-summary.yaml  project-config-summary.yaml  project-dependency-summary.yaml  project-docs-summary.yaml  project-language-summary.yaml  project-manifest-summary.yaml  project-release-summary.yaml  project-risk-summary.yaml  project-structure-summary.yaml  project-test-summary.yaml  sandbox-artifact-write-text.yaml
trusted-hosts/: local.yaml
workspaces/: local.yaml
(+266 files in other folders)
