[project]
name = "ithildin"
version = "0.1.0"
description = "Local-first governed MCP/tool gateway for AI agents."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.8",
    "pydantic>=2,<3",
    "pydantic-settings>=2.11.0",
    "pyyaml>=6.0.3",
    "uvicorn>=0.39.0",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "ruff>=0.12.0",
    "types-pyyaml>=6.0.12.20250915",
]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = [
    "apps/api/src",
    "apps/mcp-server/src",
    "packages/audit-core/src",
    "packages/policy-core/src",
    "packages/schemas/src",
    "packages/tool-sdk/src",
]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["UP045"]

[tool.setuptools]
packages = [
    "ithildin_api",
    "ithildin_audit_core",
    "ithildin_mcp_server",
    "ithildin_policy_core",
    "ithildin_schemas",
    "ithildin_tool_sdk",
]

[tool.setuptools.package-dir]
ithildin_api = "apps/api/src/ithildin_api"
ithildin_audit_core = "packages/audit-core/src/ithildin_audit_core"
ithildin_mcp_server = "apps/mcp-server/src/ithildin_mcp_server"
ithildin_policy_core = "packages/policy-core/src/ithildin_policy_core"
ithildin_schemas = "packages/schemas/src/ithildin_schemas"
ithildin_tool_sdk = "packages/tool-sdk/src/ithildin_tool_sdk"

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = [
    "apps/api/src",
    "apps/mcp-server/src",
    "packages/audit-core/src",
    "packages/policy-core/src",
    "packages/schemas/src",
    "packages/tool-sdk/src",
]
files = [
    "apps/api/src",
    "apps/mcp-server/src",
    "packages/audit-core/src",
    "packages/policy-core/src",
    "packages/schemas/src",
    "packages/tool-sdk/src",
    "tests",
]
