[project]
name = "ithildin"
version = "0.1.0"
description = "Local-first governed MCP/tool gateway for AI agents."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=48.0.0",
    "fastapi>=0.128.8",
    "mcp>=1.27.1",
    "opentelemetry-api>=1.39.1",
    "opentelemetry-exporter-otlp-proto-http>=1.39.1",
    "opentelemetry-sdk>=1.39.1",
    "pydantic>=2,<3",
    "pydantic-settings>=2.11.0",
    "pyyaml>=6.0.3",
    "uvicorn>=0.39.0",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "ruff>=0.12.0",
    "types-jsonschema>=4.26.0.20260518",
    "types-pyyaml>=6.0.12.20250915",
]
pis3 = [
    "SQLAlchemy==2.0.51",
    "alembic==1.18.5",
    "psycopg==3.3.4",
]

[tool.pytest.ini_options]
addopts = "-q"
markers = [
    "slow_packet: generated packet, bundle, demo, or external-review readiness tests that may recursively build large artifacts",
]
pythonpath = [
    ".",
    "apps/api",
    "apps/api/src",
    "apps/mcp-server/src",
    "apps/node/src",
    "packages/audit-core/src",
    "packages/policy-core/src",
    "packages/schemas/src",
    "packages/tool-sdk/src",
]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["UP045"]

[tool.setuptools]
packages = [
    "ithildin_api",
    "ithildin_audit_core",
    "ithildin_mcp_server",
    "ithildin_policy_core",
    "ithildin_schemas",
    "ithildin_tool_sdk",
    "ithildin_node",
]

[tool.setuptools.package-dir]
ithildin_api = "apps/api/src/ithildin_api"
ithildin_audit_core = "packages/audit-core/src/ithildin_audit_core"
ithildin_mcp_server = "apps/mcp-server/src/ithildin_mcp_server"
ithildin_policy_core = "packages/policy-core/src/ithildin_policy_core"
ithildin_schemas = "packages/schemas/src/ithildin_schemas"
ithildin_tool_sdk = "packages/tool-sdk/src/ithildin_tool_sdk"
ithildin_node = "apps/node/src/ithildin_node"

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = [
    ".",
    "apps/api",
    "apps/api/src",
    "apps/mcp-server/src",
    "apps/node/src",
    "packages/audit-core/src",
    "packages/policy-core/src",
    "packages/schemas/src",
    "packages/tool-sdk/src",
]
files = [
    "apps/api/src",
    "apps/mcp-server/src",
    "apps/node/src",
    "packages/audit-core/src",
    "packages/policy-core/src",
    "packages/schemas/src",
    "packages/tool-sdk/src",
    "tests",
]
